Creating Landing Page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,13 @@
 ---
 theme :
   name : bootstrap-3
+layout : default
+title: Recherch&eacute; Travel
+description: > # this means to ignore newlines until "baseurl:"
+  Recherch&eacute; Travel is focused on travel for the adventurous at heart.  Recherch&eacute; in
+  itself means rare, exotic or obscure and that's exactly how my family and I love to travel.  This 
+  travel blog is based on our personal experiences traveling around the world to over 60 different 
+  countries as three blonde women ALONE!
 ---
 {% include JB/setup %}
 {% include themes/bootstrap-3/default.html %}
