--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,4 +10,6 @@ description: > # this means to ignore newlines until "baseurl:"
   countries as three blonde women ALONE!
 ---
 {% include JB/setup %}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
 {% include themes/bootstrap-3/default.html %}
