--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -60,6 +60,7 @@
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
           <ul class="nav navbar-nav">
 		    <li style="float:right"><a href="/pages.html">Index</a></li>
+			<li style="float:left"><a href="/middle_east.html">Middle East</a></li>
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
